1st pass over concepts, tasks & references

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
@@ -14,9 +14,10 @@
       Assigning the default JRE for the workbench
     </h1>
     <p>
-      The default JRE is used for compiling and launching Java programs in all projects unless you specifically override the default JRE. The default JRE is the installed JRE to
-      which JRE_LIB, JRE_SRC and JRE_SRCROOT are bound. A project is not compiled against the default JRE if the JRE_LIB variable has been removed from its build path. A program
-      is not launched with the default JRE if a custom runtime JRE has been set for its project.
+      The default JRE is used for compiling and launching Java programs in all projects unless you specifically override the default JRE.
+      The default JRE is the installed JRE to which JRE_LIB, JRE_SRC and JRE_SRCROOT are bound.
+      A project is not compiled against the default JRE if the JRE_LIB variable has been removed from its build path.
+      A program is not launched with the default JRE if a custom runtime JRE has been set for its project.
     </p>
     <p>
       Here is how you can change the default JRE:
@@ -29,8 +30,8 @@
         Expand the <strong>Java</strong> category in the left pane and select <strong>Installed JREs</strong>.
       </li>
       <li>
-        Check the box on the line for the JRE that you want to assign as the default JRE in your workbench. If the JRE you want to assign as the default does not appear in the
-        list, you must <a href="tasks-121.htm">add it</a>.
+        Check the box on the line for the JRE that you want to assign as the default JRE in your workbench.
+        If the JRE you want to assign as the default does not appear in the list, you must <a href="tasks-121.htm">add it</a>.
       </li>
       <li>
         Click <strong>OK</strong>.
