--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-121.htm
@@ -23,10 +23,10 @@
         In the left pane, expand the <strong>Java</strong> category and select <strong>Installed JREs</strong>.
       </li>
       <li>
-        Click the&nbsp;<strong>Add...</strong> button. The Add JRE page opens.
+        Click the&nbsp;<strong>Add...</strong> button. The Create JRE dialog opens.
       </li>
       <li>
-        In the&nbsp;<strong>JRE type</strong> field, select the type of JRE you want to add from the drop-down list.
+        In the <strong>JRE type</strong> field, select the type of JRE you want to add from the drop-down list.
       </li>
       <li>
         In the&nbsp;<strong>JRE name</strong> field, type a name for the new JRE definition. All JREs of the same type must have a unique name.
