--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-122.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-122.htm
@@ -21,7 +21,7 @@
         Begin adding a new JRE definition.
       </li>
       <li>
-        In the Add JRE dialog, clear the&nbsp;<strong><strong>Use default system libraries</strong></strong> check box.<br>
+        In the Create JRE dialog, clear the <strong><strong>Use default system libraries</strong></strong> check box.<br>
          If the system was able to determine the set of system libraries, these libraries will already be displayed.
       </li>
       <li>
@@ -31,7 +31,8 @@
         Associate source with the system libraries using the&nbsp;<strong><strong>Attach source</strong></strong> button.
       </li>
       <li>
-        When you are finished with this dialog, click&nbsp;<strong><strong>OK</strong></strong> to create the new JRE definition. The new JRE definition will use the customized
+        When you are finished with this dialog, click <strong>OK</strong> to create the new JRE definition.
+        The new JRE definition will use the customized
         system libraries (and attached source).
       </li>
     </ol>
