--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -15,9 +15,11 @@
     </h1>
     For larger projects, create a project with source folders. 
     <blockquote>
-      <em>Note: When using source folders, non-Java resources are copied to the output folder by the Java builder. If you have non-Java resources (documentation, for example) that
-      should not be copied into the output folder, you can create an ordinary folder and store the resources there. You can also use the preferences page <strong>Window &gt;
-      Preferences &gt; Java &gt; Compiler &gt; Other</strong> to specify a list of resources that will not be automatically copied to the output folder.</em>
+      <em>Note: When using source folders, non-Java resources are copied to the output folder by the Java builder.
+      If you have non-Java resources (documentation, for example) that should not be copied into the output folder, 
+      you can create an ordinary folder and store the resources there. You can also use the preferences page
+      <strong>Window &gt; Preferences &gt; Java &gt; Compiler &gt; Build Path</strong>
+	  to specify a list of resources that will not be automatically copied to the output folder.</em>
     </blockquote>
     <ol>
       <li>
@@ -27,7 +29,7 @@
         Select <strong>Java</strong> from the left pane and <strong>Java Project</strong> from the right pane, then click <strong>Next</strong>. The New Java Project wizard opens.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Project Name</strong></strong> field, type a name for your new Java project.
+        In the&nbsp;<strong><strong>Project name</strong></strong> field, type a name for your new Java project.
       </li>
       <li>
         Check or clear the <strong>Use default</strong> check box to indicate whether you want to use the default location for your new project. If you clear this check box, then
