Added "Ant can find it" tip

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -297,9 +297,15 @@ and Tricks.]</p>
         <li>Select the file and from the context menu select <strong>Override 
           and Update</strong>.</li>
       </ol>
-
-
-</td>
+    </td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Ant can find it</b></td>
+    <td width="70%" valign="top" align="left">Support for Ant's well known "-find"
+      feature is now available. When the <b>Run > External Tools > Run As > Ant Build</b>
+      launch shortcut is used, Eclipse searches for the build file
+      to execute starting in the folder of the selected resource and working its way upwards.
+      The names of build files to search for are specified in the Ant preference page.</td>
   </tr>
 </table>
 
