Mac OS X changes

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -12,7 +12,7 @@
 
 <h1>Eclipse Project Release Notes</h1>
 <p><b>DRAFT </b>Pre-release 2.1.0<br>
-Last revised March 21, 2003</p>
+Last revised March 24, 2003</p>
 <p align="left"><strong>This software is OSI Certified Open Source Software.<br>
 OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 <blockquote>
@@ -99,11 +99,12 @@ Platform implementations:</p>
     <tr>
       <td width="21%" rowspan="2">Apple® Mac® OS</td>
       <td width="18%" rowspan="2">PowerPC</td>
-      <td width="73%">Java 2 Standard Edition 1.3.1 for Mac OS X 10.2</td>
+      <td width="73%">Java 2 Platform, Standard Edition, version 1.3.1 for Mac
+        OS X</td>
     </tr>
     <tr>
-      <td width="73%">Java 2 Standard Edition 1.4.1 for Mac OS X 10.2
-        (pre-release)</td>
+      <td width="73%">Java 2 Platform, Standard Edition, version 1.4.1 for Mac
+        OS X</td>
     </tr>
     <tr>
       <td width="21%"><span class="title">QNX</span>®<span class="title">
@@ -596,7 +597,7 @@ change.</p>
 <p>Eclipse 2.0 Install/Update has discontinued the use of components in favor of
 features. Consequently, PDE 2.0 supports feature-related development while
 component support has been removed. Features are described in the Eclipse
-Platform Plug-in Developer Guide. </p>
+Platform Plug-in Developer Guide.</p>
 <h2>3. <a name="Known Issues"></a> Known Issues</h2>
 <blockquote>
   <p><a href="#I-Platform">3.1 Platform</a><br>
@@ -846,9 +847,9 @@ only)</h4>
 data between applications running on the Motif window system. This is a known
 limitation of the Open Motif library. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=29777">29777</a>)</p>
 <h4>Hang opening font or color dialogs (Mac OS X Carbon only)</h4>
-<p>There are reports of hangs opening a font or color dialog on early access
-1.4.1 Mac OS X Java VMs. These problems do not occur with the officially
-released J2SE 1.3.1 for Mac OS X 10.2. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=30021">30021</a>)</p>
+<p>When running with J2SE 1.4.1 for Mac OS X, opening a font or color dialog can
+hang Eclipse. This is a bug in Apple's J2SE 1.4.1 involving Cocoa-based dialogs.
+Note that J2SE 1.3.1 for Mac OS X does have this problem. (bug <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=30021">30021</a>)</p>
 <h4>Crash when attempting to launch file browser (AIX Motif only)</h4>
 <p>There is a known AIX graphics bug affecting certain levels of AIX releases.
 Ensure that the AIX installed includes the necessary service updates as
