renamed Inline Local Variable to Inline...

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-161.htm
@@ -21,10 +21,10 @@
         Do one of the following: 
         <ul>
           <li>
-            From the menu bar, select <strong>Refactor &gt; Inline Local Variable</strong> or
+            From the menu bar, select <strong>Refactor &gt; Inline...</strong> or
           </li>
           <li>
-            From the editor's pop-up menu, select <strong>Refactor &gt; Inline Local Variable</strong>
+            From the editor's pop-up menu, select <strong>Refactor &gt; Inline...</strong>
           </li>
         </ul>
       </li>
