modified some screenshots - all are XP now

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -284,7 +284,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       in the Search Results view have different icons for read and write access. 
       For example, the search results for "fName" in "TestCase.java" look like:.</FONT> 
       <P align=center><FONT face=Verdana size=2><IMG 
-      src="images/search.gif" border=0></FONT></P></TD></TR>
+      src="images/search.gif"></FONT></P></TD></TR>
   <TR>
     <TD vAlign=top colSpan=2>
       <HR>
@@ -564,7 +564,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         the refactoring. Click <B>OK</B> to execute the refactoring without further 
         ado, or click <B>Preview</B> to see its effects before deciding whether 
         to go ahead.</FONT></P>
-      <P align=center><FONT face=Verdana size=2><IMG 
+      <P ><FONT face=Verdana size=2><IMG 
       src="images/refactoring.gif" ></FONT></P></TD></tr>
 	    <TR>
     <TD colSpan=2>
@@ -577,7 +577,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD width="70%"><FONT face=Verdana size=2>When renaming a Java type or package 
       (or when moving a type to a different package), the fully qualified name 
       of the element can now be updated in non-Java files as well.</FONT> 
-      <P align=center><FONT face=Verdana size=2><IMG 
+      <P><FONT face=Verdana size=2><IMG 
       src="images/refactor.gif" ></FONT></P></TD></TR>
   <TR>
     <TD colSpan=2>
@@ -592,7 +592,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       method to the declared class of one of the method's parameters, or to the 
       declared class of a field. This creates a new method and converts the old 
       method into a delegate (passing it 'this' if necessary).</FONT> 
-      <P align=center><FONT face=Verdana size=2><IMG 
+      <P><FONT face=Verdana size=2><IMG 
       src="images/move-method.gif" border=0></FONT></P></TD></TR>
   <TR>
     <TD colSpan=2>
@@ -618,7 +618,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
           with those already selected.</FONT> </LI>
       </UL>
       <P align=center><FONT face=Verdana size=2><IMG 
-      src="images/pull-up.gif" border=0> </FONT></P></TD></TR>	  
+      src="images/pull-up.gif"> </FONT></P></TD></TR>	  
 	    <TR>
     <TD colSpan=2>
       <HR>
@@ -638,7 +638,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         declares the method, or</FONT> 
         <LI><font face="Verdana" size="2">Leave it as is</font> </LI>
       </UL>
-      <P align=center><FONT face=Verdana size=2><IMG 
+      <P><FONT face=Verdana size=2><IMG 
       src="images/push-down.gif" border=0> </FONT></P></TD></TR>
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -905,8 +905,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         <LI><FONT face=Verdana size=2>The location of generated class files can 
           be set differently for each source folder.</FONT> </LI>
       </UL>
-      <P align=center><FONT face=Verdana size=2><IMG height=291 
-      src="images/buildPathUI.gif" width=408> </FONT></P></TD></TR>
+      <P align=center><FONT face=Verdana size=2><IMG 
+      src="images/buildPathUI.gif"> </FONT></P></TD></TR>
     <TR>
     <TD colSpan=2>
       <HR>
@@ -994,9 +994,10 @@ border=0></FONT></P></TD></TR>
       Package Explorer and Project views</FONT></B> </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>There is a new filter for excluding 
       non-shared projects from Package Explorer and Projects view:</FONT> 
-      <P align=center><FONT face=Verdana size=2><IMG 
+      <P align=center><font face=Verdana size=2><img 
       src="images/non-shared-project-filter.gif" 
-      border=0></FONT></P></TD></TR>
+      border=0></font></P>
+    </TD></TR>
   <TR>
     <TD colSpan=2>
       <HR>
