Chkpii error: FACE attribute should not be used in FONT tag

--- a/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug_launch_uiimages.htm
@@ -24,8 +24,8 @@ configuration type.</p>
 	&lt;/launchConfigurationTypeImage&gt;	
 &lt;/extension&gt;</font></pre>
 <p>Note that in 2.1, to maintain consistency with other extension points that 
-  reference launch configuration types, the <font face="Courier New, Courier, mono">configTypeID</font> 
-  attribute may also be specified as <font face="Courier New, Courier, mono">type</font>.</p>
+  reference launch configuration types, the <b>configTypeID</b>
+  attribute may also be specified as <b>type</b>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 </BODY>
 </HTML>
