corrected several occurences of "New ..."

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -21,7 +21,7 @@
         Select the container where you want the new class to reside.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Create a Java Class</strong></strong> button in the workbench toolbar.
+        Click the <strong>New Java Class</strong> button in the workbench toolbar.
       </li>
     </ol>
     <p>
@@ -43,14 +43,15 @@
         Select the container where you want the new class to reside.
       </li>
       <li>
-        From the drop-down menu on the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button in the workbench toolbar, select <strong>Class</strong>.
+        From the drop-down menu on the <strong>New</strong> button in the workbench toolbar, select <strong>Class</strong>.
       </li>
     </ol>
     <p>
       or
     </p>
     <p>
-      Click the&nbsp;<strong><strong>Open The New Wizard</strong></strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
+      Click the <strong>New</strong> button in the workbench toolbar to open the <strong>New</strong> wizard.
+      In the left pane, select <strong>Java</strong>, and in the right pane, select
       <strong>Class</strong>.
     </p>
     <p>
