--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
@@ -13,24 +13,21 @@
       Converting line delimiters
     </h1>
     <p>
-      Java editor can display Java files with various line delimiter kinds but some other external editors may not be able to handle them correctly.
+      The Java editor can handle Java files with heterogenous line delimiters.
+      However other external editors or tools may not be able to handle them correctly.
     </p>
     <p>
-      You may want to change line delimiters used by your Java files.
-    </p>
-    It may also happen that a file has heterogenous line delimiters and you want to unify them. 
-    <p>
-      To convert line delimiters in Java files:
+    If you want to change line delimiters used by your Java files:
     </p>
     <ol>
       <li>
         Open a Java file in the Java editor
       </li>
       <li>
-        Select <strong>Source &gt; Convert Line Delimiters</strong> from the menu bar
+        Select <strong>Source &gt; Convert Line Delimiters To</strong> from the menu bar
       </li>
       <li>
-        Select the delimiters to which you want to convert the file (one of <em>Windows</em>, <em>UNIX</em>, <em>Mac</em>)
+        Select the delimiters to which you want to convert the file to (one of <em>CRLF</em>, <em>LF</em>, <em>CR</em>)
       </li>
     </ol>
     <p>
