--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -24,13 +24,7 @@ Each item should stand by itself, so that the items can be easily rearranged and
 subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p>
 <p>[This section is still preliminary. The material here is lifted from the M2 
   through M5 &quot;New and Noteworthy&quot; bulletins.]</p>
-<p>----</p>
-<p>Added Behavior tab to Java Editor Preference Page for smart insertion/skipping 
-  of parenthesis and brackets, smart wrapping of strings<br>
-</p>
 <p><b>Compiler preference page</b> contains new options<br>
-  Task markers: Compiler generates markers when special keywords are detected 
-  <br>
   Deprecated in deprecated: Select if the usage of deprecated API is shown if 
   the method is already deprecated. <br>
 </p>
@@ -286,6 +280,43 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/search.gif"></FONT></P></TD></TR>
   <TR>
+    <TD colSpan=2>
+      <HR>
+    </TD></TR>
+  <TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B><FONT face=Verdana size=2>More Quick Fixes</FONT></B> 
+      </P>
+    </TD>
+    <TD width="70%"> 
+      <p>There are now Quick Fixes for additional Java problems. Click the light 
+        bulb in the left margin of the Java editor, press Ctrl+1 or select <b>Edit 
+        &gt; Quick Fix</b> from the menu to:</p>
+      <UL>
+        <LI><FONT face=Verdana size=2>Create missing constructors</FONT> 
+        <LI><FONT face=Verdana size=2>Remove unused private methods/fields or 
+          types</FONT> 
+        <LI><FONT face=Verdana size=2>Fix ambiguous imports (also suggests Organize 
+          Imports)</FONT> 
+        <LI><FONT face=Verdana size=2>Create method in outer type (for methods 
+          in anonymous classes)</FONT> 
+        <LI>Add stubs for unimplemented methods</LI>
+        <LI>Add either a catch clause or a throws declaration to deal with an 
+          uncaught exception</LI>
+        <LI>Remove a catch clause to deal with an exception no longer thrown</LI>
+        <LI>Add unimplemented abstract methods</LI>
+      </UL>
+      <P>Other compiler-detected problems that can be fixed using Quick Fix nclude:</P>
+      <ul>
+        <li>Instance variable used in a static context</li>
+        <li>Declaration of an abstract method in a non-abstract type</li>
+        <li>Non-visible method, field, type, or import.</li>
+        <li>Not externalized strings</li>
+      </ul>
+      <P><img src="images/quickFix.gif" ></P>
+    </TD>
+  </TR>
+  <TR>
     <TD vAlign=top colSpan=2>
       <HR>
     </TD></TR>
@@ -293,19 +324,19 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%">
       <DIV align=right><B><FONT face=Verdana size=2>Quick 
     assist</FONT></B></DIV></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>Position the cursor 
-      in an identifier and press Ctrl+1 (<B>Edit &gt; Quick Fix</B>) in the Java 
-      editor to invoke the quick fix mechanism even when there are no 
-      errors.</FONT> 
+    <TD vAlign=top width="70%"><FONT face=Verdana size=2>Position the cursor in 
+      an identifier and press Ctrl+1 (<B>Edit &gt; Quick Fix</B>) in the Java 
+      editor to invoke the quick fix mechanism even when there are no errors.</FONT> 
       <UL>
         <LI><FONT face=Verdana size=2>Linked rename: Available on all identifiers.</FONT> 
           <P align=left><FONT face=Verdana size=2><IMG 
-        src="images/quick-fix-localrename.gif"> 
-        <BR><BR>Switches into the editor linked mode editing (like templates), 
-        where changing the identifier changes all occurrences of that name 
-        within the source file.</FONT> </P>
+        src="images/quick-fix-localrename.gif"> <BR>
+            <BR>
+            Switches into the editor linked mode editing (like templates), where 
+            changing the identifier changes all occurrences of that name within 
+            the source file.</FONT> </P>
         <LI><FONT face=Verdana size=2>Move catch block to throws declaration: 
-        Available on the catch statement.</FONT> 
+          Available on the catch statement.</FONT> 
         <LI><FONT face=Verdana size=2>Assign expression statements to a local 
           variable or field: Available on all expression statements. e.g.:&nbsp;</FONT> 
           <TT><FONT face=Verdana size=2>&nbsp;&nbsp;<code> vector.iterator();</code></FONT></TT> 
@@ -314,59 +345,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
           <TT>&nbsp;&nbsp; </TT><code>Iterator iterator= vector.iterator();</code></FONT> 
           <FONT face=Verdana size=2><BR>
           Quick assist will guess a variable name for you.</FONT> </LI>
-      </UL></TD></TR>
-  <TR>
-    <TD colSpan=2>
-      <HR>
+        <li><font face=Verdana size=2>Remove if/while/for/do statement or block 
+          and correctly indent the content.</font> 
+        <li><font face=Verdana size=2>Quick assist offers surround-with templates 
+          when called on a multi-line selection.</font></li>
+      </UL>
     </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>More Quick Fixes and Quick 
-      Assists</FONT></B> </P></TD>
-    <TD width="70%">
-      <UL>
-        <LI><FONT face=Verdana size=2>Create missing constructors.</FONT> 
-        <LI><FONT face=Verdana size=2>Remove unused private methods/fields or 
-        types.</FONT> 
-        <LI><FONT face=Verdana size=2>Fix ambiguous imports.</FONT> 
-        <LI><FONT face=Verdana size=2>Suggestion to organize imports.</FONT> 
-        <LI><FONT face=Verdana size=2>Create method in outer type (for methods 
-        in anonymous classes).</FONT> 
-        <LI><FONT face=Verdana size=2>Remove if/while/for/do statement or block 
-        and correctly indent the content.</FONT> 
-        <LI><FONT face=Verdana size=2>Quick assist offers surround-with 
-        templates when called on a multi-line selection.</FONT> </LI></UL>
-      <P><FONT face=Verdana size=2><B>Note:</B> For existing workspaces, you may 
-      need to reset the templates back to their default values.</FONT> 
-</P></TD></TR>
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>More quick fixes</b></TD>
-    <TD vAlign=top width="70%">
-      <p>There are now quick fixes for additional Java problems: adding stubs 
-        for unimplemented methods; adding either a catch clause or a throws declaration 
-        to deal with an uncaught exception; removing a catch clause to deal with 
-        an exception no longer thrown.</p>
-      <p>Click the light bulb in the left margin of the Java editor to get help 
-        with fixing compiler-detected problems, including: instance variable used 
-        in a static context; abstract method in a non-abstract type; unimplemented 
-        abstract methods; missing catch clauses for uncaught exceptions; non-visible 
-        method, field, type, or import.</p>
-    </TD>
-  </TR>	
-  <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Quick assist</b></TD>
-    <TD vAlign=top width="70%">Hitting Ctrl + 1 in the Java editor when the quick 
-      fix icon (yellow light bulb) is showing brings up the menu of available 
-      quick fixes. This provides an easy way to declare new local variables, parameters, 
-      and fields without having to break stride.</TD>
-  </TR>	
-
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
@@ -376,7 +360,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p>The Java compiler does a better job of rating the relevance of a proposal 
         based on the type expected in the context. For instance, for <code>StringBuffer 
         sb= new [code assist]</code>, <code>StringBuffer</code> now shows up first 
-        on the list. Below is another example.</p>
+        on the list. Below is another example:</p>
       <img src="images/smart_code_assist.gif">
     </TD>
   </TR>		
@@ -472,9 +456,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>More errors detected on the fly</b></TD>
     <TD vAlign=top width="70%">
-      <p>The Java editor now put the wavy red underline (known colloquially as 
-        the &quot;red sea&quot;) under all types of errors, now including uncaught 
-        exceptions and unused variables, which require detailed flow analysis.</p>
+      <p>The Java editor now puts the wavy red underline under all types of errors, 
+        including uncaught exceptions and unused variables, which require detailed 
+        flow analysis.</p>
       <p><img src="images/errors_on_the_fly.gif" ></p>
     </TD>
   </TR>	
@@ -681,7 +665,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Convert Anonymous Class to Nested 
       Class</b></TD>
     <TD vAlign=top width="70%">
-      <p>If an anonymus inner class in your code grow too large, this refactoring 
+      <p>If an anonymous inner class in your code grow too large, this refactoring 
         will help you convert it to a member class.</p>
       <p><img src="images/convert_anonymous_to_nested.gif" width="466" height="360"></p>
     </TD>
@@ -808,7 +792,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Compiler flags unused private 
-      members</FONT></B> </P></TD>
+        members</FONT></B></P>
+    </TD>
     <TD width="70%"><FONT face=Verdana size=2>The Java compiler can now warn of 
       private method, field, or type declarations which are not used. The setting 
       is on the <B>Java / Compiler</B> preference page.</FONT> 
@@ -898,12 +883,14 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       setup offers improved flexibility:</FONT> 
       <UL>
         <LI><FONT face=Verdana size=2>Exclusion filters let you exclude certain 
-        source files within a source folder from being compiled.</FONT> 
+          source files within a source folder from being compiled.</FONT> 
         <LI><FONT face=Verdana size=2>Source folders can now be nested, provided 
-        you use an exclusion filter on the parent to exclude the files of the 
-        other.</FONT> 
+          you use an exclusion filter on the parent to exclude the files of the 
+          other.</FONT> 
         <LI><FONT face=Verdana size=2>The location of generated class files can 
           be set differently for each source folder.</FONT> </LI>
+        <LI>You can also use linked folders as source folders, class folders or 
+          output folders.</LI>
       </UL>
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/buildPathUI.gif"> </FONT></P></TD></TR>
@@ -949,8 +936,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       grouping by defining type</FONT></B> </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>The type hierarchy method view lets 
       you sort the selected type's methods by their defining type. For example, 
-      for AbstractList you can see that it contains method that were defined in 
-      Object, Collection, and List:</FONT> 
+      for <code>AbstractList</code> you can see that it contains method that were 
+      defined in <code>Object</code>, <code>Collection</code>, and <code>List</code>:</FONT> 
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/sort-by-def.gif" border=0></FONT></P></TD></TR>
 	    <TR>
@@ -990,14 +977,17 @@ border=0></FONT></P></TD></TR>
     </TD></TR>
   <TR>
     <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Non-shared project filter for 
-      Package Explorer and Project views</FONT></B> </P></TD>
-    <TD width="70%"><FONT face=Verdana size=2>There is a new filter for excluding 
-      non-shared projects from Package Explorer and Projects view:</FONT> 
+      <P align=right><B><FONT face=Verdana size=2>New filters for the Package 
+        Explorer and Project views</FONT></B> </P>
+    </TD>
+    <TD width="70%"> 
+      <p><FONT face=Verdana size=2>There are now new filters for Package Explorer 
+        and Projects views:</FONT> </p>
       <P align=center><font face=Verdana size=2><img 
       src="images/non-shared-project-filter.gif" 
       border=0></font></P>
-    </TD></TR>
+    </TD>
+  </TR>
   <TR>
     <TD colSpan=2>
       <HR>
@@ -1040,7 +1030,7 @@ border=0></FONT></P></TD></TR>
     <TD width="70%">
       <p><font face="Verdana" size="2">You can now easily generate delegate methods 
         (methods that delegate to a method provided by an instance variable) by 
-        using the <b>Generate Delegate Methods</b> action.&nbsp; The action is 
+        using the <b>Generate Delegate Methods</b> action.&nbsp;The action is 
         available on all types with fields.</font> </p>
       <p><img src="images/generate_delegate_methods.gif" width="324" height="408"> 
       </p>
@@ -1057,7 +1047,10 @@ border=0></FONT></P></TD></TR>
     <TD width="70%"><FONT face=Verdana size=2>The <B>Java / Task Tags 
       </B>preference page is used to configure the workspace-wide presentation 
       of task tags appearing in Java comments.</FONT> 
-      <P align=center><IMG src="images/task-tags.gif" ></P></TD></TR>
+      <P align=center><IMG src="images/task-tags.gif" ></P>
+      <P align>Here is an example:</P>
+      <P align=center><img src="images/todo_task.gif" width="359" height="100"></P>
+    </TD></TR>
 </table>
 
 	<p> 
