--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
@@ -18,11 +18,14 @@
         With the Java editor open, select <strong>Edit &gt; Encoding</strong> from the menu bar
       </li>
       <li>
-        Select an encoding from the menu or select <strong>Others</strong> from the menu and, in the dialog that appears, type in the encoding's name.
+        Select an encoding from the menu or select <strong>Others</strong> and, in the dialog that appears, type in the encoding's name.
       </li>
     </ul>
-    <strong>Note:</strong> this setting affects only the way the source is presented. To change the encoding that the Java editor uses to save files, use preferences on
-    <strong>Window &gt; Preferences &gt; Workbench &gt; Editors</strong>. <br>
+    <strong>Note:</strong> this setting affects only the way the source is presented.
+    <p>
+    To change the encoding that the Java editor uses when saving files, specify a
+    text file encoding preference on
+    <strong>Window &gt; Preferences &gt; Workbench &gt; Editors</strong>.<br>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
        <a href="../concepts/concepts-7.htm">Java editor</a>
